k8s-bundle-prod.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-deployment
  labels:
    app: note
spec:
  replicas: 1
  selector:
    matchLabels:
      app: note
  template:
    metadata:
      labels:
        app: note
    spec:
      containers:
        - name: note-service
          image: shelldog/note:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30010
---
apiVersion: v1
kind: Service
metadata:
  name: note-service
spec:
  type: NodePort
  selector:
    app: note 
  ports:
    - protocol: TCP
      port: 30010
      targetPort: 30010
      nodePort: 30010

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
  labels:
    app: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus-service 
          image: shelldog/event-bus:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30000
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-service
spec:
  type: NodePort
  selector:
    app: event-bus 
  ports:
    - protocol: TCP 
      port: 30000
      targetPort: 30000
      nodePort: 30000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query 
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query-service
          image: shelldog/query:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30030
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - protocol: TCP 
      port: 30030
      targetPort: 30030
      nodePort: 30030

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: behave-deployment
  labels:
    app: behave
spec:
  replicas: 1
  selector:
    matchLabels:
      app: behave
  template:
    metadata:
      labels:
        app: behave
    spec:
      containers:
        - name: behave-service
          image: shelldog/behave:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 30020
---
apiVersion: v1
kind: Service
metadata:
  name: behave-service
spec:
  type: NodePort
  selector:
    app: behave
  ports:
    - protocol: TCP
      port: 30020
      targetPort: 30020
      nodePort: 30020
